@@ -1,8 +1,17 @@
 [buildout]
 extends = versions.cfg
 package-name = eea.converter
+media-downloads-temp = {buildout:directory}/var/tmp
 
-parts += wkhtmltopdf
+parts +=
+  wkhtmltopdf
+  media-downloads-temp
+
+[media-downloads-temp]
+recipe = ore.recipe.fs:mkdir
+path = ${buildout:media-downloads-temp}
+createpath = true
+mode = 0700
 
 [wkhtmltopdf]
 recipe = hexagonit.recipe.download
@@ -11,3 +20,4 @@ url = http://eggrepo.eea.europa.eu/pypi/wkhtmltopdf/wkhtmltopdf-0.12.1.tgz
 [instance]
 environment-vars +=
     WKHTMLTOPDF_PATH ${wkhtmltopdf:location}/wkhtmltopdf
+    EEACONVERTER_TEMP ${buildout:media-downloads-temp}
